# swift-decompiler

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
Binary/: Binary.cpp  Binary.h
BinaryReader/: BinaryReader.cpp  BinaryReader.h
Finders/: Finder.cpp  Finder.h
include/: SwiftDecompiler.h
progs/: prog_arm64  prog_arm64_1  prog_arm64_2  prog_arm64_3  prog_arm64_5  prog_arm64_6  prog_arm64_7  prog_arm64_class  prog_arm64_for_loop  prog_arm64_for_loop_1  prog_arm64_for_loop_2  prog_arm64_for_loop_3  prog_arm64_if_1  prog_arm64_if_2  prog_arm64_if_3  prog_arm64_if_4  prog_arm64_switch_1  prog_arm64_while_loop_1
src/: SwiftDecompiler.cpp
